# SoftwareEngineering24

./: .pdm-python  README.md  classes.py  experiments.py  main.py  my_functions.py  pyproject.toml  test.py
