[project]
name = "first_project"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "mmamci", email = "mm3505@mci4me.at"},
]
dependencies = ["requests>=2.32.3"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
